user_create_view

--- a/templates/custom_user_tags_app/user-list.html
+++ b/templates/custom_user_tags_app/user-list.html
@@ -13,7 +13,7 @@
             {% for user in users %}
                 <li>
                     <div>
-                        {{ user }}
+                        <a href="{% url 'user-details' user.id %}">{{ user }}</a>
                     </div>
                 </li>
                 {% empty %}
