--- a/templates/custom_user_tags_app/user_form.html
+++ b/templates/custom_user_tags_app/user_form.html
@@ -2,6 +2,8 @@
 {% block content %}
     <form method="post">{% csrf_token %}
         {{ form.as_p }}
+        {% block reset-form %}
+        {% endblock %}
         <input type="submit" value="Save">
     </form>
 {% endblock %}
