user_delete_view_&_pg_13_tag_&_changed_list_view_to_table

--- a/templates/custom_user_tags_app/base.html
+++ b/templates/custom_user_tags_app/base.html
@@ -7,9 +7,11 @@
             Custom user project
         {% endblock %}
     </title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles/table_style.css' %}">
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 </body>
 </html>
