--- a/templates/custom_user_tags_app/user_detail.html
+++ b/templates/custom_user_tags_app/user_detail.html
@@ -10,5 +10,6 @@
     </div>
     <div class="link-div">
         <a href="{% url 'user-update' user.id %}">edit</a>
+        <a href="{% url 'user-delete' user.id %}">delete</a>
     </div>
 {% endblock %}
