--- a/templates/custom_user_tags_app/user-list.html
+++ b/templates/custom_user_tags_app/user-list.html
@@ -33,7 +33,7 @@
                         {{ user.random_number }}
                     </td>
                     <td>
-                        {# bizzfuzz tag #}
+                        {% bizz_fuzz user %}
                     </td>
                 </tr>
             {% empty %}
