--- a/templates/custom_user_tags_app/user-list.html
+++ b/templates/custom_user_tags_app/user-list.html
@@ -37,11 +37,9 @@
                     </td>
                 </tr>
             {% empty %}
-                <li>
-                    <div>
-                        No users yet.
-                    </div>
-                </li>
+                <td colspan="5">
+                    No users yet.
+                </td>
             {% endfor %}
         </table>
     </div>
