--- a/templates/custom_user_tags_app/user-list.html
+++ b/templates/custom_user_tags_app/user-list.html
@@ -9,8 +9,8 @@
         {% include 'custom_user_tags_app/paginator.html' with page_obj=page_obj %}
     {% endif %}
     <div class="content-list">
-        <h3>Users list</h3>
-        <table>
+        <table class="users-list">
+            <thead>
             <tr>
                 <th>Username</th>
                 <th>Birthday</th>
@@ -18,6 +18,7 @@
                 <th>Random number</th>
                 <th>BizzFuzz</th>
             </tr>
+            </thead>
             {% for user in users %}
                 <tr>
                     <td>
@@ -43,6 +44,7 @@
             {% endfor %}
         </table>
     </div>
+    <a href="{% url 'user-add' %}">add user</a>
     {% if is_paginated %}
         {% include 'custom_user_tags_app/paginator.html' with page_obj=page_obj %}
     {% endif %}
