--- a/templates/custom_user_tags_app/user_confirm_delete.html
+++ b/templates/custom_user_tags_app/user_confirm_delete.html
@@ -1,7 +1,9 @@
 {% extends 'custom_user_tags_app/base.html' %}
 {% block content %}
-    <form method="post">{% csrf_token %}
-        <p>Are you sure you want to delete {{ object }}?</p>
-        <input type="submit" value="Delete">
-    </form>
+    <div class="form-div">
+        <form method="post">{% csrf_token %}
+            <p>Are you sure you want to delete {{ object }}?</p>
+            <input type="submit" value="Delete">
+        </form>
+    </div>
 {% endblock %}
