--- a/templates/custom_user_tags_app/user_form.html
+++ b/templates/custom_user_tags_app/user_form.html
@@ -1,9 +1,11 @@
 {% extends 'custom_user_tags_app/base.html' %}
 {% block content %}
-    <form method="post">{% csrf_token %}
-        {{ form.as_p }}
-        {% block reset-form %}
-        {% endblock %}
-        <input type="submit" value="Save">
-    </form>
+    <div class="form-div">
+        <form method="post">{% csrf_token %}
+            {{ form.as_p }}
+            {% block reset-form %}
+            {% endblock %}
+            <input type="submit" value="Save">
+        </form>
+    </div>
 {% endblock %}
